--- a/amp/prime-pagine/index.html
+++ b/amp/prime-pagine/index.html
@@ -1,1 +1,157 @@
+<!doctype html>
+<html ⚡ lang="it">
+<head>
+  <meta charset="utf-8">
+  <title>Prime pagine dei giornali | Bruno Rachiele</title>
+
+  <link rel="canonical" href="https://brunorachiele.it/prime-pagine">
+  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  <meta name="robots" content="index, follow">
+
+  <!-- AMP CORE -->
+  <script async src="https://cdn.ampproject.org/v0.js"></script>
+  <script async custom-element="amp-ad"
+    src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+<style amp-boilerplate>
+body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
+-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
+-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
+animation:-amp-start 8s steps(1,end) 0s 1 normal both}
+@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
+@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
+@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
+@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
+@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
+</style>
+<noscript>
+<style amp-boilerplate>
+body{-webkit-animation:none;
+-moz-animation:none;
+-ms-animation:none;
+animation:none}
+</style>
+</noscript>
+
+
+  <!-- STILI -->
+  <style amp-custom>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 12px;
+      background: #f5f5f5;
+    }
+    h1 {
+      text-align: center;
+      margin: 16px 0;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+      gap: 12px;
+    }
+    .card {
+      background: #fff;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 2px 6px rgba(0,0,0,.1);
+      text-decoration: none;
+      color: #000;
+    }
+    .card h2 {
+      font-size: 0.9em;
+      margin: 8px;
+      text-align: center;
+    }
+    amp-img {
+      width: 100%;
+    }
+    .ad {
+      margin: 24px 0;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.85em;
+      color: #666;
+      margin: 24px 0;
+    }
+  </style>
+</head>
+
+<body>
+
+<h1>Prime pagine dei giornali</h1>
+
+<!-- PUBBLICITÀ -->
+<div class="ad">
+  <amp-ad width="100vw" height="320"
+    type="adsense"
+    data-ad-client="ca-pub-9225028785900171"
+    data-ad-slot="2980836148"
+    data-auto-format="rspv"
+    data-full-width="">
+    <div overflow=""></div>
+  </amp-ad>
+</div>
+
+<div class="grid">
+
+  <!-- ITALIA -->
+  <a class="card" href="https://www.corriere.it" target="_blank">
+    <amp-img src="https://upload.wikimedia.org/wikipedia/commons/8/8b/Corriere_della_Sera.svg"
+      width="300" height="420" layout="responsive"></amp-img>
+    <h2>Corriere della Sera</h2>
+  </a>
+
+  <a class="card" href="https://www.repubblica.it" target="_blank">
+    <amp-img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/La_Repubblica.svg"
+      width="300" height="420" layout="responsive"></amp-img>
+    <h2>La Repubblica</h2>
+  </a>
+
+  <a class="card" href="https://www.lastampa.it" target="_blank">
+    <amp-img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/La_Stampa_logo.svg"
+      width="300" height="420" layout="responsive"></amp-img>
+    <h2>La Stampa</h2>
+  </a>
+
+  <a class="card" href="https://www.ilsole24ore.com" target="_blank">
+    <amp-img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Il_Sole_24_Ore.svg"
+      width="300" height="420" layout="responsive"></amp-img>
+    <h2>Il Sole 24 Ore</h2>
+  </a>
+
+  <!-- ESTERO -->
+  <a class="card" href="https://www.nytimes.com" target="_blank">
+    <amp-img src="https://upload.wikimedia.org/wikipedia/commons/4/40/New_York_Times_logo_variation.jpg"
+      width="300" height="420" layout="responsive"></amp-img>
+    <h2>New York Times</h2>
+  </a>
+
+  <a class="card" href="https://www.theguardian.com" target="_blank">
+    <amp-img src="https://upload.wikimedia.org/wikipedia/commons/8/8c/The_Guardian_2018.svg"
+      width="300" height="420" layout="responsive"></amp-img>
+    <h2>The Guardian</h2>
+  </a>
+
+  <a class="card" href="https://www.lemonde.fr" target="_blank">
+    <amp-img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Le_Monde.svg"
+      width="300" height="420" layout="responsive"></amp-img>
+    <h2>Le Monde</h2>
+  </a>
+
+  <a class="card" href="https://www.faz.net" target="_blank">
+    <amp-img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Faz_logo.svg"
+      width="300" height="420" layout="responsive"></amp-img>
+    <h2>Frankfurter Allgemeine</h2>
+  </a>
+
+</div>
+
+<footer>
+  © amp.brunorachiele.it
+</footer>
+
+</body>
+</html>
 
