--- a/amp/autore/bruno-rachiele.html
+++ b/amp/autore/bruno-rachiele.html
@@ -15,21 +15,22 @@
 
   <!-- AMP boilerplate -->
   <style amp-boilerplate>
-    body {
-      -webkit-animation: -amp-start 8s steps(1,end) 0s 1 normal both;
-      animation: -amp-start 8s steps(1,end) 0s 1 normal both;
-    }
-    @keyframes -amp-start {
-      from { visibility: hidden; }
-      to { visibility: visible; }
-    }
-  </style>
+body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
+      -moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
+      -ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
+      animation:-amp-start 8s steps(1,end) 0s 1 normal both}
+@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
+@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
+@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
+@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
+@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
+</style>
 
-  <noscript>
-    <style amp-boilerplate>
-      body { animation: none; }
-    </style>
-  </noscript>
+<noscript>
+<style amp-boilerplate>
+body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
+</style>
+</noscript>
 
   <!-- STILI -->
   <style amp-custom>
@@ -196,7 +197,7 @@ Spinto dalla passione per il diritto, Bruno si è iscritto alla Facoltà di Giur
   <section>
     <h2>Approfondimenti</h2>
     <ul>
-      <li><a href="https://ermes-giornale.blogspot.com/p/bruno-rachiele.html">Editoriali</a></li>
+      <li><a href="https://ermes-giornale.blogspot.com/p/bruno-rachiele.html">Tutti gli Editoriali</a></li>
       <li>
         <a href="https://www.brunorachiele.it/" target="_blank" rel="noopener noreferrer">
           Tutti i sondaggi politici
