--- a/amp/autori/bruno-rachiele.html
+++ b/amp/autori/bruno-rachiele.html
@@ -121,6 +121,30 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
       "https://twitter.com/RachieleBruno"
     ]
   }
+  
+  "memberOf": [
+  {
+    "@type": "Organization",
+    "name": "Consulta Provinciale degli Studenti",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Catanzaro",
+      "addressRegion": "Calabria",
+      "addressCountry": "IT"
+    }
+  }
+],
+"hasRole": [
+  {
+    "@type": "Role",
+    "roleName": "Rappresentante degli studenti",
+    "startDate": "2021-10-01",
+    "endDate": "2023-07-31",
+    "description": "Rappresentante alla Consulta Provinciale degli Studenti di Catanzaro con incarichi nel coordinamento provinciale e regionale, eletto dalla comunità scolastica."
+  }
+]
+
+  
   </script>
 
 </head>
