--- a/amp/autori/bruno-rachiele.html
+++ b/amp/autori/bruno-rachiele.html
@@ -210,6 +210,41 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
     </ul>
   </section>
 
+<section class="author-gallery">
+  <h2>Galleria fotografica</h2>
+
+  <figure>
+    <img src="/foto/intervistarai.png"
+         alt="Bruno Rachiele intervista su Rai3">
+    <figcaption>Intervista Rai3 Buongiorno Regione - gennaio 2022</figcaption>
+  </figure>
+
+  <figure>
+    <img src="/foto/intervistalac.png"
+         alt="Bruno Rachiele intervista su LaCtv">
+    <figcaption>Intervista LaCtv - marzo 2021</figcaption>
+  </figure>
+
+  <figure>
+    <img src="/foto/intervistacovid.png"
+         alt="Dichiarazioni alla Stampa">
+    <figcaption>Dichiarazioni alla Stampa post discussione Trasporti Pubblici e Strutture Scolastiche - 7 gennaio 2022 </figcaption>
+  </figure>
+
+    <figure>
+    <img src="/foto/intervistartl.jpg"
+         alt="Bruno Rachiele intervistato da rtl 102.5 - 14 febbraio 2021">
+    <figcaption>Bruno Rachiele intervistato da rtl 102.5</figcaption>
+  </figure>
+
+    <figure>
+    <img src="/foto/intervistartl1025.png"
+         alt="Bruno Rachiele intervistato da rtl 102.5 - 14 febbraio 2021">
+    <figcaption>Bruno Rachiele intervistato da rtl 102.5</figcaption>
+  </figure>
+  
+</section>
+  
 </main>
 
 </body>
